--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,7 +1,7 @@
 #top-nav {
   background: rgb(233,122,99, .55);
   color: whitesmoke;
-  /* border-bottom: 1px solid rgb(255,255,255, .65); */
+  border-bottom: 10px solid rgb(237,2126,11, .5);
 }
  
 #bottom-nav {
